src/styles/PurchaseInfo.css
.titleContainer {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.title {
  font-size: 20px;
  font-family: Bitter;
  font-weight: 400;
}

.pricequestionContainer {
  display: flex;
  margin-top: 10px;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.price {
  font-size: 25px;
}

.BUTTON_6 {
  align-self: flex-end;
}

.selectOption {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 20px;
}

.quantity {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 20px;
}

.form {
  margin-top: 25px;
  display: flex;
  justify-content: center;
  align-items: stretch;
}

.formbutton {
  border-style: none;
  font-family: sans-serif;
  font-weight: bold;
  color: white;
  background-color: #F3651F;
  width: 100%;
  height: 35px;
  border-radius: 4px;
}

.gaurantee {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.gauranteeContainer {
  margin-top: 20px;
  height: 105px;
  padding-left: 15px;
  padding-right: 15px;
  background-color: #FAF9F5;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.PurchaseGaurantee {
  font-size: 19px;
}

.learnmore {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.shield {
  margin-right: 10px;
}

.OverviewSection {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.OverviewSection h3 {
  font-size: 20px;
}

.OverviewSection ul {
  list-style: disc outside none;
  line-height: 20px;
  padding-left: 20px;
}

.OverviewSection li {
  font-size: 14px;
  color: #666;
  padding-left: 1px;
  display: list-item;
  text-align: left;
  position: relative;
}

.OverviewSection button {
  margin-top: 10px;
  margin-bottom: 10px;
  background-color: white;
  border-style: none;
  border-radius: 4px;
  border-color: #dbdbdb;
  border-style: solid;
  border-width: 1px;
}

.OverviewSection hr {
  width: 100%;
  border-style: solid;
  border-color: #dbdbdb;
  border-width: .5px;
}

.OverviewSection a {   color: #F56400 ; }

.favoriteButton {
  margin-right: 15px;
}

